tests/ui/abi/sparcv8plus.sparcv8plus.stderr
error: +v8plus,+v9
  --> $DIR/sparcv8plus.rs:35:1
   |
LL | compile_error!("+v8plus,+v9");
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

